--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #658147;
+    background-color: #597445;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -19,7 +19,7 @@ body {
 
 .title {
     font-size: 7em;
-    color: #FFFFFF;
+    color: #E7F0DC;
     text-align: center;
     margin: 20px 0;
 }
@@ -36,10 +36,10 @@ body {
 }
 
 .form-container {
-    background-color: #dbf3bd;
+    background-color: #E7F0DC;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 0px rgba(0, 0, 0, 0.1);
     position: relative;
     align-items: center;
     justify-content: center;
@@ -62,7 +62,7 @@ input {
     width: 90%;
     padding: 20px;
     margin-bottom: 20px;
-    background: #dbf3bd;
+    background: #E7F0DC;
     border: 2px solid #658147;
     border-radius: 12px;
     font-weight: 500;
